# peky

./: .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  README.md  RELEASE-DOCS.md  codefetch.config.mjs  custom-layout-support-for-custom-panes.md  go.mod  go.sum  justfile  peakypanes.code-workspace  tools.go
.github/workflows/: ci.yml  homebrew-tap.yml  nightly-stress.yml  npm-release.yml  release.yml
cmd/devwatch/: main.go  main_test.go
cmd/peakypanes/: cmd_clone.go  cmd_daemon.go  cmd_dashboard.go  cmd_init.go  cmd_layouts.go  cmd_more_test.go  cmd_start.go  help.go  help_extra.go  help_profiler.go  input_unix.go  input_unix_test.go  input_windows.go  main.go  main_extra_test.go  main_menu_test.go  main_more_test.go  main_test.go  mux_helpers.go  pprof_supported_profiler.go  pprof_supported_stub.go  run_env.go
cmd/peky/: main.go  main_test.go
cmd/projmux/: main.go
cmd/tmuxhelp/: main.go
docs/: 05-stream-terminal  cli.md  configuration.md  daemon.md  dashboard.md  investigation-live-preview.md  layout-builder.md  perf.md  performance.md  resize-architecture.md  resize-release.md  resize-ux.md  testing.md  troubleshooting.md
public/: peakypanes-ansi.txt
scripts/: build-npm-packages  cli-smoke.sh  cli-stress.sh  commit  dev-debug.sh  dev-run  dev-tmux  dev-watch  fresh-run  npm-publish-oidc  perf-12pane  perf-40pane  perf-bench  perf-profiler  perf-snapshot-check  perf-tmux  reinit.sh  release  tmux-help.sh  update-homebrew-tap
skills/: manifest.json
zellij-plugins/peakypanes-bridge/: Cargo.toml
zellij-plugins/peakypanes-bridge/src/: lib.rs
(+874 files in other folders)
