[package]
name = "peakypanes-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zellij-tile = { git = "https://github.com/zellij-org/zellij", rev = "1296a46a68f7a63681f294c12fadc9ca5e0c6459", package = "zellij-tile" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
